--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,28 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - main
+    - main
   pull_request:
     branches:
-      - main
+    - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Sử dụng môi trường Ubuntu
+    runs-on: ubuntu-latest # Sử dụng môi trường Ubuntu
 
     steps:
-      # Bước 1: Check out mã nguồn
-      - name: Checkout code
-        uses: actions/checkout@v3
+    # Bước 1: Check out mã nguồn
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    # Setup Docker
+    - name: Setup Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    # Log in to Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }} # Define these secrets in your GitHub repo
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
