--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
 
     # Set up SSH to connect to Docker server
     - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.10.3
+      uses: webfactory/ssh-agent@main
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
