--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,9 @@ jobs:
       run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
 
     # Set up SSH to connect to Docker server
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@main
+    - name: Thiết lập SSH
+      uses: webfactory/ssh-agent@v0.9.0
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
 
