--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,16 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+    # Pull image from Docker Hub on remote server and start container
+    - name: Deploy to Docker Server
+      run: |
+        ssh -o StrictHostKeyChecking=no hnxadmin@${{ secrets.DOCKER_SERVER }} << 'EOF'
+        docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
+        docker stop your-container || true
+        docker rm your-container || true
+        docker run -d --name your-container -p 80:80 ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
+        EOF
+      env:
+        DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+        DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
