Update Github Action Pipeline - Docker Build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,12 +49,13 @@ jobs:
         DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
         DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}x
         CONTAINER_NAME: cicd_webapplication
+        REPOSITORY_NAME: garydipprey
       run: |
         ssh -o StrictHostKeyChecking=no hnxadmin@${{ secrets.DOCKER_SERVER }} << 'EOF'
         docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
         docker stop $CONTAINER_NAME || true
         docker rm $CONTAINER_NAME || true
-        docker run -d --name $CONTAINER_NAME -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/$CONTAINER_NAME:latest
+        docker run -d --name $CONTAINER_NAME -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/$REPOSITORY_NAME:latest
         EOF
 
 
