--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,9 +53,9 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no hnxadmin@${{ secrets.DOCKER_SERVER }} << 'EOF'
         docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
-        docker stop \$CONTAINER_NAME || true
-        docker rm \$CONTAINER_NAME || true
-        docker run -d --name \$CONTAINER_NAME -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
+        docker stop ${CONTAINER_NAME} || true
+        docker rm ${CONTAINER_NAME} || true
+        docker run -d --name ${CONTAINER_NAME} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
         EOF
 
 
