--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,14 +48,14 @@ jobs:
       env:
         DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
         DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-        CONTAINER_NAME: cicd_webapplication
+        CONTAINER_NAME: ${{ secrets.CONTAINER_NAME_DEMO }}
         REPOSITORY_NAME: garydipprey
       run: |
         ssh -o StrictHostKeyChecking=no hnxadmin@${{ secrets.DOCKER_SERVER }} << 'EOF'
         docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
-        docker stop ${CONTAINER_NAME} || true
-        docker rm ${CONTAINER_NAME} || true
-        docker run -d --name ${CONTAINER_NAME} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
+        docker stop ${{ secrets.CONTAINER_NAME_DEMO }} || true
+        docker rm ${{ secrets.CONTAINER_NAME_DEMO }} || true
+        docker run -d --name ${{ secrets.CONTAINER_NAME_DEMO }} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
         EOF
 
 
