--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
     # Setup Docker
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v2
+      
 
     # Log in to Docker Hub
     - name: Log in to Docker Hub
@@ -31,11 +32,13 @@ jobs:
 
     # Build the Docker image
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest .
+      run: |
+       BUILD_NUMBER=${{ github.run_number }}
+       docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:$BUILD_NUMBER .
 
     # Push the Docker image to Docker Hub
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
+      run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:$BUILD_NUMBER
 
     # Set up SSH to connect to Docker server
     - name: Thiết lập SSH
@@ -55,7 +58,7 @@ jobs:
         docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
         docker stop ${{ secrets.CONTAINER_NAME_DEMO }} || true
         docker rm ${{ secrets.CONTAINER_NAME_DEMO }} || true
-        docker run -d --name ${{ secrets.CONTAINER_NAME_DEMO }} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
+        docker run -d --name ${{ secrets.CONTAINER_NAME_DEMO }} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:latest
         EOF
 
 
