--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,20 @@ jobs:
         username: ${{ secrets.DOCKER_HUB_USERNAME }} # Define these secrets in your GitHub repo
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
+    # Set Build Number
+    - name: Set build number
+      run:  echo "BUILD_NUMBER=${{ github.run_number }}" >> $GITHUB_ENV
+
+    # Check Build Number value
+    - name: Check Build Number
+      run: echo $BUILD_NUMBER  
+
     # Build the Docker image
     - name: Build Docker image
       run: |
        BUILD_NUMBER=${{ github.run_number }}
        docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:$BUILD_NUMBER .
-
+       
     # Push the Docker image to Docker Hub
     - name: Push Docker image
       run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:$BUILD_NUMBER
@@ -58,7 +66,7 @@ jobs:
         docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
         docker stop ${{ secrets.CONTAINER_NAME_DEMO }} || true
         docker rm ${{ secrets.CONTAINER_NAME_DEMO }} || true
-        docker run -d --name ${{ secrets.CONTAINER_NAME_DEMO }} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:latest
+        docker run -d --name ${{ secrets.CONTAINER_NAME_DEMO }} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:$BUILD_NUMBER
         EOF
 
 
