--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         REPOSITORY_NAME: garydipprey
       run: |
         ssh -o StrictHostKeyChecking=no hnxadmin@${{ secrets.DOCKER_SERVER }} << 'EOF'
-        docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/cicd_webapplication:latest
+        docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:$BUILD_NUMBER
         docker stop ${{ secrets.CONTAINER_NAME_DEMO }} || true
         docker rm ${{ secrets.CONTAINER_NAME_DEMO }} || true
         docker run -d --name ${{ secrets.CONTAINER_NAME_DEMO }} -p 106:80 ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:$BUILD_NUMBER
