--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,11 @@ jobs:
         ssh -o StrictHostKeyChecking=no hnxadmin@${{ secrets.DOCKER_SERVER }} << 'EOF'
         docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.CONTAINER_NAME_DEMO }}:${{ env.BUILD_NUMBER }}
         docker stop ${{ secrets.CONTAINER_NAME_DEMO }} || true
+        docker rm ${{ secrets.CONTAINER_NAME_DEMO }} || true
         
         while [ "$(docker ps -a -q -f name=${{ secrets.CONTAINER_NAME_DEMO }})" ]; do
           echo "Container vẫn tồn tại. Đang chờ xóa..."
-          sleep 1
+          sleep 5
           docker rm -f ${{ secrets.CONTAINER_NAME_DEMO }} || true
         done
         
